--- a/re2cApp/src/Makefile
+++ b/re2cApp/src/Makefile
@@ -4,57 +4,60 @@ include $(TOP)/configure/CONFIG
 
 PROD_HOST = re2c
 
+RE2CSRC = $(TOP)/re2cApp/src/re2c-src
+
+# This is correct for re2c-0.16
 re2c_SRCS = \
-	src/codegen/bitmap.cc \
-	src/codegen/emit_action.cc \
-	src/codegen/emit_dfa.cc \
-	src/codegen/label.cc \
-	src/codegen/go_construct.cc \
-	src/codegen/go_destruct.cc \
-	src/codegen/go_emit.cc \
-	src/codegen/go_used_labels.cc \
-	src/codegen/input_api.cc \
-	src/codegen/output.cc \
-	src/codegen/print.cc \
-	src/conf/msg.cc \
-	src/conf/opt.cc \
-	src/conf/warn.cc \
-	src/ir/nfa/calc_size.cc \
-	src/ir/nfa/nfa.cc \
-	src/ir/nfa/split.cc \
-	src/ir/adfa/adfa.cc \
-	src/ir/adfa/prepare.cc \
-	src/ir/dfa/determinization.cc \
-	src/ir/dfa/fillpoints.cc \
-	src/ir/dfa/minimization.cc \
-	src/ir/regexp/display.cc \
-	src/ir/regexp/encoding/enc.cc \
-	src/ir/regexp/encoding/range_suffix.cc \
-	src/ir/regexp/encoding/utf8/utf8_regexp.cc \
-	src/ir/regexp/encoding/utf8/utf8_range.cc \
-	src/ir/regexp/encoding/utf8/utf8.cc \
-	src/ir/regexp/encoding/utf16/utf16_regexp.cc \
-	src/ir/regexp/encoding/utf16/utf16.cc \
-	src/ir/regexp/encoding/utf16/utf16_range.cc \
-	src/ir/regexp/fixed_length.cc \
-	src/ir/regexp/regexp.cc \
-	src/ir/compile.cc \
-	src/ir/rule_rank.cc \
-	src/ir/skeleton/control_flow.cc \
-	src/ir/skeleton/generate_code.cc \
-	src/ir/skeleton/generate_data.cc \
-	src/ir/skeleton/match_empty.cc \
-	src/ir/skeleton/maxlen.cc \
-	src/ir/skeleton/skeleton.cc \
-	src/ir/skeleton/unreachable.cc \
-	src/ir/skeleton/way.cc \
-	src/main.cc \
-	src/parse/code.cc \
-	src/parse/input.cc \
-	src/parse/scanner.cc \
-	src/parse/unescape.cc \
-	src/util/s_to_n32_unsafe.cc \
-	src/util/range.cc
+	$(RE2CSRC)/src/codegen/bitmap.cc \
+	$(RE2CSRC)/src/codegen/emit_action.cc \
+	$(RE2CSRC)/src/codegen/emit_dfa.cc \
+	$(RE2CSRC)/src/codegen/label.cc \
+	$(RE2CSRC)/src/codegen/go_construct.cc \
+	$(RE2CSRC)/src/codegen/go_destruct.cc \
+	$(RE2CSRC)/src/codegen/go_emit.cc \
+	$(RE2CSRC)/src/codegen/go_used_labels.cc \
+	$(RE2CSRC)/src/codegen/input_api.cc \
+	$(RE2CSRC)/src/codegen/output.cc \
+	$(RE2CSRC)/src/codegen/print.cc \
+	$(RE2CSRC)/src/conf/msg.cc \
+	$(RE2CSRC)/src/conf/opt.cc \
+	$(RE2CSRC)/src/conf/warn.cc \
+	$(RE2CSRC)/src/ir/nfa/calc_size.cc \
+	$(RE2CSRC)/src/ir/nfa/nfa.cc \
+	$(RE2CSRC)/src/ir/nfa/split.cc \
+	$(RE2CSRC)/src/ir/adfa/adfa.cc \
+	$(RE2CSRC)/src/ir/adfa/prepare.cc \
+	$(RE2CSRC)/src/ir/dfa/determinization.cc \
+	$(RE2CSRC)/src/ir/dfa/fillpoints.cc \
+	$(RE2CSRC)/src/ir/dfa/minimization.cc \
+	$(RE2CSRC)/src/ir/regexp/display.cc \
+	$(RE2CSRC)/src/ir/regexp/encoding/enc.cc \
+	$(RE2CSRC)/src/ir/regexp/encoding/range_suffix.cc \
+	$(RE2CSRC)/src/ir/regexp/encoding/utf8/utf8_regexp.cc \
+	$(RE2CSRC)/src/ir/regexp/encoding/utf8/utf8_range.cc \
+	$(RE2CSRC)/src/ir/regexp/encoding/utf8/utf8.cc \
+	$(RE2CSRC)/src/ir/regexp/encoding/utf16/utf16_regexp.cc \
+	$(RE2CSRC)/src/ir/regexp/encoding/utf16/utf16.cc \
+	$(RE2CSRC)/src/ir/regexp/encoding/utf16/utf16_range.cc \
+	$(RE2CSRC)/src/ir/regexp/fixed_length.cc \
+	$(RE2CSRC)/src/ir/regexp/regexp.cc \
+	$(RE2CSRC)/src/ir/compile.cc \
+	$(RE2CSRC)/src/ir/rule_rank.cc \
+	$(RE2CSRC)/src/ir/skeleton/control_flow.cc \
+	$(RE2CSRC)/src/ir/skeleton/generate_code.cc \
+	$(RE2CSRC)/src/ir/skeleton/generate_data.cc \
+	$(RE2CSRC)/src/ir/skeleton/match_empty.cc \
+	$(RE2CSRC)/src/ir/skeleton/maxlen.cc \
+	$(RE2CSRC)/src/ir/skeleton/skeleton.cc \
+	$(RE2CSRC)/src/ir/skeleton/unreachable.cc \
+	$(RE2CSRC)/src/ir/skeleton/way.cc \
+	$(RE2CSRC)/src/main.cc \
+	$(RE2CSRC)/src/parse/code.cc \
+	$(RE2CSRC)/src/parse/input.cc \
+	$(RE2CSRC)/src/parse/scanner.cc \
+	$(RE2CSRC)/src/parse/unescape.cc \
+	$(RE2CSRC)/src/util/s_to_n32_unsafe.cc \
+	$(RE2CSRC)/src/util/range.cc
 
 include $(TOP)/configure/RULES
 #----------------------------------------
